fix: ensures tabs can overflow on mobile when there are many

--- a/src/admin/components/forms/field-types/Tabs/index.scss
+++ b/src/admin/components/forms/field-types/Tabs/index.scss
@@ -6,7 +6,6 @@
   margin-right: calc(var(--gutter-h) * -1);
   margin-bottom: base(2);
 
-  &__tabs,
   &__content-wrap {
     padding-left: var(--gutter-h);
     padding-right: var(--gutter-h);
@@ -15,16 +14,39 @@
   &--within-collapsible {
     margin: 0 calc(#{$baseline} * -1);
 
-    .tabs-field__tabs,
     .tabs-field__content-wrap {
       padding-left: $baseline;
       padding-right: $baseline;
     }
+
+    .tabs-field__tabs {
+      &:before,
+      &:after {
+        content: ' ';
+        display: block;
+        width: $baseline,
+      }
+    }
+  }
+
+  &__tabs-wrap {
+    overflow: auto;
+    margin-bottom: $baseline;
   }
 
   &__tabs {
     border-bottom: 1px solid var(--theme-elevation-100);
-    margin-bottom: $baseline;
+    display: inline-flex;
+    min-width: 100%;
+    vertical-align: bottom;
+
+    &:before,
+    &:after {
+      content: ' ';
+      display: block;
+      width: var(--gutter-h);
+      flex-shrink: 0;
+    }
   }
 
   &__tab-button {
@@ -35,6 +57,8 @@
     cursor: pointer;
     opacity: .5;
     position: relative;
+    white-space: nowrap;
+    flex-shrink: 0;
 
     &:last-child {
       margin: 0;
